--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 /* Estilos iniciales de la imagen */
 #imagen {
     filter: grayscale(100%);
+    max-width: 100%;
+    height: auto;
   }
   
   /* Selector de atributo para aplicar los estilos según el valor de data-estado */
@@ -78,4 +80,26 @@
     color: white;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   }
+
+  @media only screen and (min-width: 601px) {
+    #imagen {
+      width: 100%;
+      height: auto;
+    }
+  }  
+
+  @media only screen and (max-width: 600px) {
+    .position-relative {
+      height: 60vh;
+    }
+  
+    #imagen {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 50% 0;
+    }
+  }
+  
+  
   
