--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,28 @@
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   }
 
+  #frase2 {
+    position: absolute;
+    top: 30%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  }
+
+  #frase3 {
+    position: absolute;
+    top: 70%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    font-weight: bold;
+    color: white;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  }
+
   @media only screen and (min-width: 601px) {
     #imagen {
       width: 100%;
